bk_ida/gccida/g2/finalize_type_size
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finalize_type_size/src/stor-layout.c:1761:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finalize_type_size/src/stor-layout.c:1762:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finalize_type_size/src/stor-layout.c:1763:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finalize_type_size/src/stor-layout.c:1765:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finalize_type_size/src/stor-layout.c:1767:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finalize_type_size/src/stor-layout.c:1768:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finalize_type_size/src/stor-layout.c:1779:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finalize_type_size/src/stor-layout.c:1780:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finalize_type_size/src/stor-layout.c:1789:40: error: use of undeclared identifier 'machine_mode'
mode_alignment = get_mode_alignment( ( machine_mode)( v2 >> 1)); 
                                       ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finalize_type_size/src/obj/stor-layout.o] Error 1
